ajustando media query e rgb

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
                 <input type="text" id="name" placeholder="Nome"> <br>
                 <input type="text" id="email" placeholder="E-mail"> <br>
                 <input type="text" id="cpf" placeholder="CPF"> <br>
-                <input type="checkbox" id="gender"> 
-                <label for="masc">Masculino</label> 
-                <input type="checkbox" id="gender"> 
-                <label for="masc">Feminino</label> <br>
+                <select name="gender" id="gender">
+                    <option value=""> Gênero </option>
+                    <option value="masc"> Masculino </option>
+                    <option value="fem"> Feminino </option>
+                </select>
                 <button type="submit" id="submitBtn"> Enviar </button>
                 </form>
         </div>
