--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio | Landing Page</title>
+    <title> Landing Page </title>
     <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <script src="https://kit.fontawesome.com/eccb42ae3e.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -49,6 +50,12 @@
                 </form>
         </div>
     </main>
+
+    <section role="contentinfo" aria-label="Produtos" id="productSection"> 
+        <hr> <h3> Sua seleção especial </h3> <hr> 
+        <div id="products">           <!-- Criar elementos via DOM -->
+        </div>
+    </section>
 
     <script src="./js/script.js"></script>
 </body>
