--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </div>
     </header>
 
-    <main role="main">
+    <main role="main" id="main">
         <div class="main-text">
-            <h2>Ajude o Algoritmo a ser mais certeiro <a href="#top"> <i class="fa-solid fa-angle-up"> </i> </a> </h2> 
+            <h2>Ajude o Algoritmo a ser mais certeiro <a href="#main"> <i class="fa-solid fa-angle-down"> </i> </a> </h2> 
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies tellus nec mi porta convallis sollicitudin eu urna. Mauris rhoncus erat sed interdum dignissim. Suspendisse semper pretium consectetur. Praesent bibendum arcu risus, sit amet iaculis ex tempus quis. Cras et erat ut tellus vulputate tincidunt. Aenean lacinia euismod augue vel egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum vel urna tortor. Vivamus et arcu non felis tristique eleifend. </p>
         </div>
 
@@ -52,10 +52,33 @@
     </main>
 
     <section role="contentinfo" aria-label="Produtos" id="productSection"> 
-        <hr> <h3> Sua seleção especial </h3> <hr> 
+        <h2> Seus produtos <a href="#productSection"> <i class="fa-solid fa-angle-down"></i> </a> </h2>
         <div id="products">           <!-- Criar elementos via DOM -->
         </div>
     </section>
+
+    <section role="contentinfo" aria-label="Compartilhar" id="shareSection">
+        <div class="section-text">
+            <h2> Compartilhe a novidade <a href="#shareSection"> <i class="fa-solid fa-angle-down"></i> </a> </h2>
+            <p> Quer que seus amigos também ganhem a lista personalizada deles? Preencha agora! </p>
+        </div>
+
+        <div class="section-form">
+            <form action="get" role="form" aria-label="Formulário">
+                <label for="name"> Nome do seu amigo: </label>
+                <input type="text" id="name">
+                <label for="name"> E-mail dele: </label>
+                <input type="text" id="email">
+                <button type="submit" id="submitBtn"> Enviar agora </button>
+            </form>
+        </div>
+    </section>
+
+    <footer role="contentinfo" aria-label="Rodapé">
+        <p> Testando suas habilidades em HTML, CSS e JS </p>
+        <p> the4nna for FFSJS </p>
+        <p> 2022 </p>
+    </footer>
 
     <script src="./js/script.js"></script>
 </body>
