estilizando section e footer

--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
 
         <div class="section-form">
             <form action="get" role="form" aria-label="Formulário">
-                <label for="name"> Nome do seu amigo: </label>
-                <input type="text" id="name">
-                <label for="name"> E-mail dele: </label>
-                <input type="text" id="email">
+                <h2> Compartilhar </h2>
+                <label for="name"> Nome do seu amigo </label>
+                <input type="text" id="name"> <br>
+                <label for="name"> E-mail dele </label> 
+                <input type="text" id="email"> <br>
                 <button type="submit" id="submitBtn"> Enviar agora </button>
             </form>
         </div>
