adicionando ancora na li

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="header-nav">
             <nav role="navigation" aria-label="Menu">
                 <ul>
-                    <li> <a href="#"> Conheça a Linx </a> </li>
-                    <li> <a href="#"> Ajude o algoritmo </a> </li>
-                    <li> <a href="#"> Seus produtos </a> </li>
-                    <li> <a href="#"> Compartilhe </a> </li>
+                    <li> <a href="#top"> Conheça a Linx </a> </li>
+                    <li> <a href="#main"> Ajude o algoritmo </a> </li>
+                    <li> <a href="#productSection"> Seus produtos </a> </li>
+                    <li> <a href="#shareSection"> Compartilhe </a> </li>
                 </ul>
             </nav>
         </div>
