--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section role="contentinfo" aria-label="Produtos" id="productSection"> 
         <h2> Seus produtos <a href="#productSection"> <i class="fa-solid fa-angle-down"></i> </a> </h2>
-        <div id="products">           <!-- Criar elementos via DOM -->
+        <div id="productsContainer">           <!-- Criar elementos via DOM -->
         </div>
     </section>
 
