adicionando botao next page

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
 
     <section role="contentinfo" aria-label="Produtos" id="productSection"> 
         <h2> Seus produtos <a href="#productSection"> <i class="fa-solid fa-angle-down"></i> </a> </h2>
-        <div id="productsContainer">           <!-- Criar elementos via DOM -->
+        <div id="productsContainer">          
         </div>
-        
+        <div class="divNextPage">
+            <button id="buttonNextPage" onclick="urlLoad()" type="submit"> Mais produtos </button>
+        </div>
     </section>
 
     <section role="contentinfo" aria-label="Compartilhar" id="shareSection">
