adicionando icon com as parcelas e ajustando botão de carregar mais

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
         <div id="productsContainer">          
         </div>
         <div class="divNextPage">
-            <button id="buttonNextPage" onclick="urlLoad()" type="submit"> Mais produtos </button>
+            <button id="buttonNextPage" onclick="loadMore()" type="submit"> Mais produtos </button>
         </div>
+        <div id="installmentDiv"> </div>
     </section>
 
     <section role="contentinfo" aria-label="Compartilhar" id="shareSection">
