ajustando div de produtos para desktop e estilizando hover dos botões

--- a/index.html
+++ b/index.html
@@ -46,25 +46,19 @@
                     <option value="masc"> Masculino </option>
                     <option value="fem"> Feminino </option>
                 </select>
-                <button type="submit" id="submitBtn"> Enviar </button>
+                <button type="submit" class="submitBtn"> Enviar </button>
                 </form>
         </div>
     </main>
 
     <section role="contentinfo" aria-label="Produtos" id="productSection"> 
         <h2> Seus produtos <a href="#productSection"> <i class="fa-solid fa-angle-down"></i> </a> </h2>
-        <div id="productsContainer">     
-            <div class="productDiv">
-                <img src="//imagens.pontofrio.com.br/Control/ArquivoExibir.aspx?IdArquivo=5783178" class="productImg">  <img> 
-                <h3 class="productName"> Product Number 0 </h3> 
-                <p class="productDescription"> Product long description number 0 just to make more than one like of text. </p>
-                <span class="productPrice"> <s> $ 237.00 </s> </span> <br>
-                <span class="productPrice"> $ 191.00 </span> 
-                <button class="buyButton"> Comprar </button>
-                </div>
+        <div id="productsContainer">          
+        </div>
         <div class="divNextPage">
             <button id="buttonNextPage" onclick="loadMore()" type="submit"> Mais produtos </button>
         </div>
+        <div id="installmentDiv"> </div>
     </section>
 
     <section role="contentinfo" aria-label="Compartilhar" id="shareSection">
