--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     id="registerForm"
                 >
                     <h2>Inscreva-se</h2>
-                    <input type="text" name="name" placeholder="Nome" /> <br />
-                    <input type="text" name="email" placeholder="E-mail" />
+                    <input type="text" name="name" placeholder="Nome" aria-label="name"/> <br />
+                    <input type="text" name="email" placeholder="E-mail" aria-label="email" />
                     <br />
-                    <input type="text" name="cpf" placeholder="CPF" /> <br />
+                    <input type="text" name="cpf" placeholder="CPF" aria-label="gender" /> <br />
                     <select name="gender" id="gender">
                         <option value="">Gênero</option>
                         <option value="masc">Masculino</option>
