--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Projeto de landing page para similação de um processo seletivo">
         <title>Landing Page</title>
         <link rel="stylesheet" href="./css/style.css" type="text/css" />
         <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
@@ -59,7 +60,7 @@
                 </p>
             </div>
 
-            <div class="main-form">
+            <aside class="main-form">
                 <form
                     action="get"
                     role="form"
@@ -78,7 +79,7 @@
                     </select>
                     <button type="submit" class="submitBtn">Enviar</button>
                 </form>
-            </div>
+            </aside>
         </main>
 
         <section role="contentinfo" aria-label="Produtos" id="productSection">
