--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
                     id="registerForm"
                 >
                     <h2>Inscreva-se</h2>
-                    <input type="text" name="name" placeholder="Nome" aria-label="name"/> <br />
-                    <input type="text" name="email" placeholder="E-mail" aria-label="email" />
+                    <label for="name" aria-label="name"> Digite seu nome: </label>
+                    <input type="text" name="name" placeholder="Nome" /> <br />
+                    <label for="email" aria-label="email"> Digite seu e-mail: </label>
+                    <input type="text" name="email" placeholder="E-mail"  />
                     <br />
-                    <input type="text" name="cpf" placeholder="CPF" aria-label="gender" /> <br />
+                    <label for="cpf" aria-label="gender"> Digite seu cpf: </label>
+                    <input type="text" name="cpf" placeholder="CPF"  /> <br />
                     <select name="gender" id="gender">
                         <option value="">Gênero</option>
                         <option value="masc">Masculino</option>
